Update gitignore and comments

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ current_unique_only_old/
 bad_images/
 final_output/
 fixed_sprites/
+fixed_sprites_uncompressed/
 only_used_hou_sprites/
 Higurashi Hou Plus Sprites/
+Higurashi Hou Plus Sprites Uncompressed/
 mapped_sprites/
 hou_plus_sha256.pickle
